# rowcol

./: .cursorrules  .gitignore  2_README_AR.markdown  API_STRATEGY_ANALYSIS.md  DEVELOPMENT_STANDARDS.md  INCOMPLETE_IMPLEMENTATIONS_AUDIT.md  Makefile  PHASE0_COMPLETION_COMMIT.md  PHASE0_TESTING_STRATEGY.md  README.md  README_Cashcall_reconcililaion_plan.md  README_ServicePro_Reconciliation_Plan.md  RECOVERY_PLAN.md  SERVICEPRO_EXECUTION_PLAN.md  STRATEGIC_PIVOT_COMPLETE.md  WEEKEND_COMPLETION_STATUS.md  auditlogs.md  backlog_qbo_smartsync_cleanup.md  bookkeeper_workbench.py  bookkeeper_workbench_v2.py  bundle_files.py  bundle_files_entities.py  cashola_ai_coding_playbook_v_0.md  database.py  dev_plan.md  infrastructure_consolidation_plan.md  load_seed_data.py  main.py  masterplan_from_cashola_back_to_Oodaloo_via_QBO.md  openapi.yaml  parts.md  phase0_bootstrap.sh  phase0_setup.sh  pyproject.toml  pytest.ini  qbo_sandbox_data_examples.md  realistic_test_data.json
_clean/: README.md  pyproject.toml  pytest.ini
_clean/architecture/: ADR-001-domains-runway-separation.md  ADR-003-multi-tenancy-strategy.md  ADR-005-qbo-api-strategy.md  ADR-007-service-boundaries.md  ADR-010-multi-rail-financial-control-plane.md  comprehensive_architecture.md
_clean/mvp/: 0_EXECUTABLE_TASKS.md  NEXT_THREAD_HANDOVER.md  TASKS_9_10_API_INFRASTRUCTURE_AND_UTILITIES.md  TASK_11_BUSINESS_RULES_AND_CONFIG.md  advisor_workflow_solutioning.md  mvp_comprehensive_prd.md  recovery_build_plan.md  validate_qbo_foundation_final.py
_clean/mvp/api/: routes.py
_clean/mvp/archive/: domain_gateway_filtering_design.md
_clean/mvp/domains/ap/: __init__.py  gateways.py
_clean/mvp/domains/ar/: __init__.py  gateways.py
_clean/mvp/domains/bank/: __init__.py  gateways.py
_clean/mvp/infra/api/: __init__.py  base_client.py  exceptions.py
_clean/mvp/infra/config/: __init__.py
_clean/mvp/infra/db/: models.py  schema.sql  session.py
_clean/mvp/infra/gateways/: __init__.py
_clean/mvp/infra/gateways/qbo/: __init__.py  balances_gateway.py  bills_gateway.py  invoices_gateway.py
_clean/mvp/infra/rails/qbo/: __init__.py  auth.py  client.py  config.py  health.py  setup.py  setup_OAuth2_intuit.md  utils.py
_clean/mvp/infra/repos/: __init__.py  ap_repo.py  ar_repo.py  bank_repo.py  log_repo.py
_clean/mvp/infra/sync/: __init__.py  base_sync_service.py  entity_policy.py  orchestrator.py
_clean/mvp/infra/utils/: __init__.py  enums.py  error_handling.py  validation.py
_clean/mvp/runway/: __init__.py  wiring.py
_clean/mvp/runway/services/: __init__.py  console_service.py  digest_service.py  runway_orchestrator.py  tray_service.py
_clean/mvp/tests/: conftest.py  test_qbo_auto_refresh.py  test_qbo_simple.py  test_qbo_throttling.py  test_smart_sync.py  test_stale_mirror.py  test_system_tokens.py  test_token_refresh_detailed.py
_clean/product/: RowCol_Pilot‑for‑Firms_Control_Plane for CAS 2.0 – Investment Brief.docx  RowCol_Strategic_Brief.markdown  digest_prd.md  product_strategy.md
_clean/product/firm_dir/: bill_analyze_partners.py  bill_partner_scrape.py  bill_partner_table.html  bill_partners.csv  ramp_analyze_partners.py  ramp_partner_scrape.py  ramp_partner_table.html  ramp_partners.csv
_clean/product/prd/: decision_console_prd.md  hygiene_tray_prd.md
_clean/spreadsheet_builder/: E0_PHASE_0_PORTING_AND_INTEGRATION.md  E1_PHASE_1_TEMPLATE_SYSTEM.md  README_TASK_STRUCTURE.md  ROWCOL_MVP_BUILD_PLAN.md  ROWCOL_MVP_PRODUCT_SPECIFICATION.md  S0_NEEDS_SOLUTIONING.md
_clean/spreadsheet_builder/chats/: 0_chatgpt_thread_transcript.md  1_groks_later_stage_thread_plans.md  2_chatgpt_excel_forensic_decomposition_prompt.md  what_got_lost.md
_clean/spreadsheet_builder/design_meetings/: mfo_cash_forecast_8.1.25.xlsx  transcript_mission_first_design_meeting_10_03_2025.csv
_clean/spreadsheet_builder/example_code/: chatgpt_template_output_xlsx_builder.txt  output.xlsx  template_v1.xlsx
_clean/strangled_fig/: backstory.md  migration_manifest.md  stepped_plan.md
_parked/: README.md  job_cost_dashboard.py  job_reconciliation_summary.py  servicepro_reconciliation_dashboard.py
agent/: LAUNCH_SELF_HEALING_TASKS.md  task_template_self_healing.md
cashcall_scenarios/: SCENARIOS_AR_Unbundling.md  fixtures_cashcall.py  test_fee_handling.py  test_ghost_ar.py  test_payout_settlement_match.py  test_timing_guardrail.py
(+1102 files in other folders)
