[tool.poetry]
name = "rowcol-mvp"
version = "0.1.0"
description = "RowCol MVP - QBO-only Financial Control Plane"
authors = ["RowCol Team <team@rowcol.com>"]
readme = "README.md"
packages = [{include = "mvp", from = "."}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
sqlalchemy = "^2.0.0"
requests = "^2.31.0"
httpx = "^0.25.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
intuit-oauth = "^1.2.6"
tenacity = "^8.2.0"
beautifulsoup4 = "^4.14.0"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["runway", "domains", "infra"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "infra.*",
    "domains.*",
    "runway.*",
]
disallow_untyped_defs = false
